# prompt-ops

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  jwt_token.txt  start-dev.ps1  test_api.js  test_chat.js  test_servers.js  test_token.txt
ai-service/: Dockerfile  agent_pb2.py  agent_pb2_grpc.py  pyproject.toml  server.py  test_client.py
control-panel/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
control-panel/app/: app.vue
control-panel/app/assets/css/: main.css
control-panel/app/pages/: index.vue
daemon/: gateway.go  go.mod  go.sum  main.go  test_mcp.ps1
daemon/db/: db.go
daemon/docker/: docker.go  docker_linux.go  docker_windows.go
daemon/mcp/: mcp.go
daemon/metrics/: metrics.go  metrics_linux.go  metrics_windows.go
daemon/pty/: pty_linux.go  pty_windows.go
daemon/shell/: shell.go
gateway/: Dockerfile  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
gateway/drizzle/: 0000_stormy_maginty.sql
gateway/drizzle/meta/: 0000_snapshot.json  _journal.json
gateway/src/: grpc.ts  index.ts
gateway/src/db/: index.ts  schema.ts
shared/proto/: agent.proto
